--- a/style/index.css
+++ b/style/index.css
@@ -301,7 +301,7 @@ footer p {
 
 .similar-movie-item img {
   width: 100%;
-  height: 240px;
+  max-height: 200px;
   object-fit: cover;
   object-position: center;
 }
